feat: atividade completa
